# evermore

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
apps/stacker/: .env.example  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
docs/: CLAUDE.md  architecture.md  auth-flow.md  cloudflare-ai-gateway-setup.md  evermore-vision-and-architecture.md  local-development.md  module-template.md  subscriptions.md
docs/adr/: 0001-monorepo-structure.md  0002-github-native-project-management.md  0003-standardized-tech-stack.md  0004-petdata-postgres-pgvector.md  0005-retriever-langfuse-v4.md  0006-datadog-via-otel-collector.md  0007-llm-gateway-consolidation.md  0008-all-cloudflare-hosting.md
docs/plans/: petdata-postgres-migration-9b.md  petdata-postgres-migration.md  repo-restructure-and-rename.md
docs/research/: README.md  _reorg-manifest.md
services/petdata/: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  entrypoint.sh  pyproject.toml  wrangler.jsonc
services/petdata/alembic/: env.py
services/petdata/alembic/versions/: 001_initial_schema.py
services/petdata/docs/adr/: 000-template.md  001-example.md  002-mutable-pydantic-models.md
services/petdata/docs/design/: architecture.md  concept.md  development-standards.md  phase1-data-extraction.md
services/petdata/docs/guides/: cloudflare-containers.md
services/petdata/scripts/: check_version.py
services/petdata/src/petbio/: __init__.py  config.py  main.py
services/petdata/src/petbio/modules/api/: __init__.py  auth.py  client.py  exceptions.py  parser.py
services/petdata/src/petbio/modules/db/: __init__.py  migrate.py  models.py  repository.py  schema.py
services/petdata/src/petbio/modules/db/migrations/: 001_initial_schema.sql  README.md  __init__.py
services/petdata/src/petbio/modules/web/: __init__.py  dependencies.py  routes.py  schemas.py
services/petdata/src/petdata/: __init__.py  config.py  main.py
services/petdata/src/petdata/infrastructure/: __init__.py
services/petdata/src/petdata/infrastructure/database/: __init__.py  session.py
services/petdata/src/petdata/models/: __init__.py  base.py  mappers.py  tables.py
services/petdata/src/petdata/modules/api/: __init__.py  auth.py  client.py  exceptions.py  parser.py
services/petdata/src/petdata/modules/db/: __init__.py  migrate.py  models.py  repository.py
services/petdata/src/petdata/modules/db/migrations/: README.md  __init__.py
services/petdata/src/petdata/modules/web/: __init__.py  dependencies.py  routes.py  schemas.py
services/petdata/tests/: conftest.py
services/petdata/tests/integration/api/: test_client.py
services/petdata/tests/integration/db/: test_alembic.py  test_migration_flow.py  test_repository.py
services/petdata/tests/integration/web/: __init__.py  test_llms_txt.py
services/petdata/tests/unit/api/: test_auth.py  test_exceptions.py  test_parser.py
services/petdata/tests/unit/db/: test_migrate.py  test_migrations.py  test_models.py  test_repository_helpers.py  test_schema.py
services/petdata/tests/unit/models/: test_base.py  test_mappers.py  test_pool.py  test_tables.py
services/petdata/worker/: index.ts  package-lock.json  package.json  tsconfig.json
services/retriever/: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  wrangler.jsonc
(+134 files in other folders)
