[project]
name = "petdata"
version = "1.2.0"
description = "automated adoption profile generator"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "structlog>=24.0",
    "fast-llms-txt>=0.5.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "python-semantic-release>=9.0",
    "respx>=0.21",
    "pytest-mock>=3.14",
    "pytest-asyncio>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petdata"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["petdata"]

[tool.ruff.lint.flake8-type-checking]
# SQLAlchemy resolves Mapped[...] annotations at runtime, so imports used only
# in mapped-class annotations must stay at module scope.
runtime-evaluated-base-classes = ["petdata.models.base.Base"]

[tool.mypy]
python_version = "3.14"
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pydantic_settings", "pydantic_settings.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uvicorn", "structlog", "structlog.*", "httpx", "httpx.*", "fast_llms_txt", "fast_llms_txt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests that require a live Postgres instance",
]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_parser = "conventional"
build_command = "uv build"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test", "task"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
